Fixed Thing Data Value List Wrapping

--- a/client/components/raygun/editor/things/things.css
+++ b/client/components/raygun/editor/things/things.css
@@ -110,6 +110,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap : wrap;
+  margin-bottom: 30px;
+  padding-bottom: 50px;
 }
 
 .thingDataValue{
